Co-authored-by: Shachaf Har Tsvi <hartsvis@post.bgu.ac.il>

--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="he">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Space Invaders Game</title>
-  <link rel="stylesheet" href="styles.css">
+
+  <link rel="stylesheet" href="styles.css" />
   <script src="main.js" defer></script>
   <script src="game.js" defer></script>
 </head>
+
 <body>
+  <!-- ===== Header ===== -->
   <header>
     <div class="header-content">
-      <img src="si_logo.png" alt="Space Invaders Logo" class="header-logo">
+      <img src="si_logo.png" alt="Space Invaders Logo" class="header-logo" />
       <h1>Space Invaders</h1>
     </div>
   </header>
 
-  <audio id="playerHitSound" src="player_hit.wav"></audio>
-  <audio id="targetHitSound" src="target_hit.wav"></audio>
+  <!-- ===== Audio ===== -->
+  <audio id="playerHitSound"  src="player_hit.wav"></audio>
+  <audio id="targetHitSound"  src="target_hit.wav"></audio>
   <audio id="cannonFireSound" src="cannon_fire.wav"></audio>
   <audio id="bgMusic" preload="auto" loop>
-    <source src="spaceinvaders1.mpeg" type="audio/mpeg">
-    Your browser does not support the audio element.
+    <source src="spaceinvaders1.mpeg" type="audio/mpeg" />
   </audio>
+
+  <!-- ===== Nav ===== -->
   <nav>
     <ul>
       <li id="navWelcome"><a href="#" data-target="welcome">Welcome</a></li>
@@ -30,13 +35,15 @@
       <li id="navLogin"><a href="#" data-target="login">Login</a></li>
       <li id="configNav" style="display:none"><a href="#" data-target="config">Config</a></li>
       <li id="navLogout" style="display:none"><a href="#" id="logoutBtn">Logout</a></li>
-      <li id="navAbout"><a href="#" data-target="about">About</a></li>
+      <li id="navAbout"><a href="#" id="openAbout">About</a></li>
     </ul>
   </nav>
 
+  <!-- ===== Main screens ===== -->
   <main>
+    <!-- Welcome -->
     <section id="welcome" class="screen active">
-      <img src="si_logo.png" alt="Space Invaders Logo" class="welcome-logo">
+      <img src="si_logo.png" class="welcome-logo" />
       <h2>Welcome to Space Invaders!</h2>
       <p>Defend Earth from invading space aliens...</p>
       <div class="welcome-buttons">
@@ -45,70 +52,56 @@
       </div>
     </section>
 
+    <!-- Register -->
     <section id="register" class="screen">
       <h2>Register</h2>
       <form id="registerForm">
-        <input type="text" id="regUsername" placeholder="Username" required>
-        <input type="password" id="regPassword" placeholder="Password" required>
-        <input type="password" id="regConfirm"  placeholder="Confirm Password" required>
-        <input type="text"     id="firstName"   placeholder="First Name" required>
-        <input type="text"     id="lastName"    placeholder="Last Name" required>
-        <input type="email"    id="email"       placeholder="Email" required>
-        <input type="date"     id="birthdate"   required>
+        <input id="regUsername" placeholder="Username" required />
+        <input type="password" id="regPassword" placeholder="Password" required />
+        <input type="password" id="regConfirm"  placeholder="Confirm Password" required />
+        <input id="firstName" placeholder="First Name" required />
+        <input id="lastName"  placeholder="Last Name" required />
+        <input type="email" id="email" placeholder="Email" required />
+        <input type="date" id="birthdate" required />
         <button type="submit">Submit</button>
       </form>
       <div id="registerError" class="error"></div>
     </section>
 
+    <!-- Login -->
     <section id="login" class="screen">
       <h2>Login</h2>
       <form id="loginForm">
-        <input type="text"     id="loginUsername" placeholder="Username" required>
-        <input type="password" id="loginPassword" placeholder="Password" required>
+        <input id="loginUsername" placeholder="Username" required />
+        <input type="password" id="loginPassword" placeholder="Password" required />
         <button type="submit">Login</button>
       </form>
       <div id="loginError" class="error"></div>
     </section>
 
-    <section id="about" class="screen">
-      <h2>About Space Invaders</h2>
-      <p>Battle against relentless waves of cosmic aliens in this arcade-style shooter! <br>Features include:</p>
-      <ul>
-        <li>Dynamic enemy patterns</li>
-        <li>Upgradable weapons</li>
-        <li>Score tracking</li>
-        <li>Progressive difficulty</li>
-      </ul>
-      <p>Developed for BGU Web Development Course using modern web technologies:</p>
-      <p>HTML5 + CSS + JavaScript + Canvas</p>
-    </section>
-
+    <!-- Config -->
     <section id="config" class="screen">
       <h2>Configuration</h2>
       <form id="configForm">
-        <label>Select Fire Key:
-          <select id="fireKey">
-            <option value=" ">Space</option>
-            <option value="A">A</option>
-            <option value="S">S</option>
-            <option value="D">D</option>
-            <option value="F">F</option>
-          </select>
+        <label>Fire Key:
+          <button id="fireKeyBtn" type="button">Space</button>
         </label>
-        <label>Game Time (minutes):
-          <input type="number" id="gameTime" value="2" min="2">
+        <label>Game Time (min):
+          <input id="gameTime" type="number" value="2" min="2" />
         </label>
         <label>Ship Color:
-          <input type="color" id="shipColor" value="#00ff00">
+          <input id="shipColor" type="color" value="#00ff00" />
         </label>
         <button type="submit">Start Game</button>
       </form>
+
       <div class="music-controls">
-        <button id="musicToggle">Toggle Music</button>
-        <input type="range" id="musicVolume" min="0" max="1" step="0.1" value="0.3">
+        <button id="musicToggle">Music: ON</button>
+        <input id="musicVolume" type="range" min="0" max="1" step="0.1" value="0.3" />
       </div>
     </section>
 
+    <!-- Game -->
     <section id="game" class="screen">
       <canvas id="gameCanvas" width="800" height="600"></canvas>
       <div id="hud">
@@ -121,8 +114,23 @@
     </section>
   </main>
 
-  <footer>
-    <p>Good luck!</p>
-  </footer>
+  <!-- ===== About – modal dialog ===== -->
+  <div id="aboutModal" class="modal hidden" role="dialog" aria-modal="true">
+    <div class="modal-content">
+      <button id="aboutClose" class="close-btn" aria-label="Close">✕</button>
+      <h2>About This Project</h2>
+      <p><strong>Submitted by:</strong> Shahar Navian &amp; Shachaf Har Tsvi </p>
+      <p><strong>Template used:</strong> We didn't use</p>
+      <p><strong>jQuery plugins:</strong> we didn't used</p>
+      <p><strong>Main challenges:</strong></p>
+      <ul>
+        <li>Synchronising custom UI with canvas game loop</li>
+        <li>Managing audio volumes &amp; user preferences</li>
+        <li>Diagonal-bullet maths &amp; collision tuning</li>
+      </ul>
+    </div>
+  </div>
+
+  <footer><p>Good luck!</p></footer>
 </body>
 </html>
