Only the About left to do

--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
     </div>
   </div>
 
-  <footer><p>Good luck!</p></footer>
-</body>
-</html>
+    <!-- ===== Footer ===== -->
+    <footer>
+      <p>
+        Technical support:&nbsp;
+        <a href="mailto:navians@psot.bgu.ac.il">navians@psot.bgu.ac.il</a>
+      </p>
+    </footer>
+  </body>
+  </html>
+
