--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <ul>
         <li>Synchronising custom UI with canvas game loop</li>
         <li>Managing audio volumes &amp; user preferences</li>
-        <li>Diagonal-bullet maths &amp; collision tuning</li>
+        <li>Diagonal-bullet maths</li>
       </ul>
     </div>
   </div>
